slightly smaller image captions to prevent cutoff on 1080p windows

--- a/assets/sass/_type.scss
+++ b/assets/sass/_type.scss
@@ -203,7 +203,10 @@ html[data-b="GC"]{
   }
 }
 .dc-media--list figcaption{
-  font-size: 0.8rem;
+  font-size: 0.7rem;
+  @media (min-width: 901px) and (max-aspect-ratio: 107/70){
+    font-size: 0.85rem;
+  }
   letter-spacing: 0.005em;
 }
 
